# edd-tp04

./: README.md  pyproject.toml
tp_04/ejercicio_01/: linked_binary_tree_ext.py  linked_binary_tree_ext_abstract.py  linked_binary_tree_ext_client.py
tp_04/ejercicio_03/: unsorted_priority_queue.py  unsorted_priority_queue_abstract.py  unsorted_priority_queue_client.py
tp_04/ejercicio_05/: pq_stack_client.py  priority_queue_stack.py
tp_04/ejercicio_07/: heap_queue.py  heap_queue__client.py
