[tool.poetry]
name = "tp-04"
version = "0.1.0"
description = ""
authors = ["Geronimo Giovenale <geronimo.giovenale@devify.it>"]
readme = "README.md"
packages = [{include = "tp_04"}]

[tool.poetry.dependencies]
python = "^3.11"
python-ed-fcad-uner = {git = "https://github.com/nachonovello1984/python_ed_fcad_uner.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
